removed gaps and fixed formatting

--- a/css/PalleteMenu.processed.css
+++ b/css/PalleteMenu.processed.css
@@ -36,7 +36,7 @@ nav>ol>li {
   z-index: 20;
   border-radius: 0 8px 8px 0;
   cursor: pointer;
-  margin-left: 1vw;
+  /* margin-left: 1vw; */
   box-shadow: 7px 7px 14px rgba(0, 0, 0, 0.4);
 }
 
@@ -61,7 +61,7 @@ nav>ol>li .sub-menu {
   transition: 0.5s cubic-bezier(0.77, 0, 0.175, 1);
   transform: translateY(0px);
   width: 192px;
-  margin-left: 1vw;
+  /* margin-left: 1vw; */
   border-radius: 0 0 8px 8px;
   box-shadow: 7px 7px 14px rgba(0, 0, 0, 0.4);
 }
